--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Temporary Items
 /proyectoChatTelnet/nbproject/private/
 /proyectoChatTelnet/build/
 /proyectoChatTelnet/dist/
+/Tareas/proyectoChatTelnet/build/
+/Tareas/proyectoChatTelnet/dist/
+/Tareas/proyectoChatTelnet/nbproject/private/
