--- a/Tareas/proyectoChatTelnet/nbproject/project.properties
+++ b/Tareas/proyectoChatTelnet/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectochattelnet.ProyectoChatTelnet
+main.class=socketsServidor.Sockets
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
