--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ Temporary Items
 /Tareas/proyectoChatTelnet/build/
 /Tareas/proyectoChatTelnet/dist/
 /Tareas/proyectoChatTelnet/nbproject/private/
+/Tareas/proyectoChatClienteServidor/nbproject/private/
+/Tareas/proyectoChatClienteServidor/build/
+/Tareas/proyectoChat_ClienteServidor/nbproject/private/
+/Tareas/proyectoChat_ClienteServidor/build/
+/Tareas/proyectoChat_ClienteServidor/dist/
