--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Temporary Items
 /Tareas/proyectoChatTelnet/build/
 /Tareas/proyectoChatTelnet/dist/
 /Tareas/proyectoChatTelnet/nbproject/private/
+/PProyectoConcu/Aquario/clienteAcuario/nbproject/private/
