--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ Temporary Items
 /Tareas/proyectoChatTelnet/dist/
 /Tareas/proyectoChatTelnet/nbproject/private/
 /PProyectoConcu/Aquario/clienteAcuario/nbproject/private/
+/PProyectoConcu/Aquario/clienteAcuario/build/
+/PProyectoConcu/Aquario/clienteAcuario/dist/
