--- a/GISDES/GISDES/Web.config
+++ b/GISDES/GISDES/Web.config
@@ -65,6 +65,7 @@
   <connectionStrings>
     <add name="GISDESEntity" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=software220181.database.windows.net;initial catalog=GISDES;persist security info=True;user id=software2;password=sistemas.2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="GISDESEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=software220181.database.windows.net;initial catalog=GISDES;persist security info=True;user id=software2;password=sistemas.2018;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GisdesEntity" connectionString="metadata=res://*/Models.ConexionBD.csdl|res://*/Models.ConexionBD.ssdl|res://*/Models.ConexionBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=software220181.database.windows.net;initial catalog=GISDES;persist security info=True;user id=software2;password=sistemas.2018;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
