--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ GISDES/.vs/GISDES/v15/.suo
 GISDES/.vs/GISDES/v15/.suo
 GISDES/.vs/GISDES/v15/.suo
 GISDES/.vs/GISDES/v15/.suo
+GISDES/.vs/GISDES/v15/Server/sqlite3/storage.ide-shm
+GISDES/.vs/GISDES/v15/Server/sqlite3/storage.ide-wal
+GISDES/GISDES/obj/Debug/GISDES.csproj.CoreCompileInputs.cache
+GISDES/GISDES/obj/Debug/GISDES.csprojResolveAssemblyReference.cache
